Correct bottom row spacing, social media links not redirecting

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -22,6 +22,7 @@
 .bottom {
     & > p:first-child {
       font-weight: 700;
+      padding-left: 0;
     }
     p {
       display: inline;
